<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.cardview.widget.CardView
                android:id="@+id/info_card_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="0dp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_usage_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:elevation="5dp"
                android:text="@string/current_usage_text"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/info_card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/info_card_view"
                tools:text="当前流量" />

            <TextView
                android:id="@+id/usage_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="5dp"
                android:text="@string/usage_number"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="60sp"
                app:layout_constraintBottom_toTopOf="@+id/balance_text_view"
                app:layout_constraintEnd_toStartOf="@id/unit_text_view"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_usage_text_view"
                tools:text="25.00" />

            <TextView
                android:id="@+id/unit_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="5dp"
                android:text="@string/usage_unit"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/usage_number_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/usage_number_text_view"
                tools:text="GB" />

            <TextView
                android:id="@+id/balance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:text="@string/balance_text"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/balance_number_text_view"
                app:layout_constraintEnd_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="余额" />

            <TextView
                android:id="@+id/balance_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:elevation="5dp"
                android:text="@string/placeholder"
                android:textColor="@color/design_default_color_on_primary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/info_card_view"
                app:layout_constraintEnd_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="¥12.12" />

            <TextView
                android:id="@+id/account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:text="@string/account_text"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/balance_number_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vertical_center_guideline"
                tools:text="账户" />

            <TextView
                android:id="@+id/account_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:elevation="5dp"
                android:text="@string/placeholder"
                android:textColor="@color/design_default_color_on_primary"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/info_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vertical_center_guideline"
                tools:text="yingr16" />

            <TextView
                android:id="@+id/network_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:text="@string/network_text"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_card_view"
                tools:text="网络" />

            <TextView
                android:id="@+id/network_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:text="@string/placeholder"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/vertical_center_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/network_text_view"
                tools:text="Tsinghua-5G" />

            <TextView
                android:id="@+id/devices_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:text="@string/devices_text"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vertical_center_guideline"
                app:layout_constraintTop_toBottomOf="@+id/info_card_view"
                tools:text="设备" />

            <TextView
                android:id="@+id/devices_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:text="@string/placeholder"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/vertical_center_guideline"
                app:layout_constraintTop_toBottomOf="@+id/devices_text_view"
                tools:text="3" />

            <ImageButton
                android:id="@+id/devices_detail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/devices_text"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:tint="@android:color/tab_indicator_text"
                app:layout_constraintBottom_toBottomOf="@+id/devices_number_textView"
                app:layout_constraintStart_toEndOf="@+id/devices_text_view"
                app:layout_constraintTop_toTopOf="@+id/devices_text_view" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/network_name_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>
